tests/ui/lexer/lex-bad-char-literals-4.rs
//
// This test needs to the last one appearing in this file as it kills the parser
static c: char =
    'â—  //~ ERROR: unterminated character literal
;

// ferrocene-annotations: fls_ypa86oqxhn9u
// Character Literals
